# visualiza-o_elei-es

./: LICENSE.md  README.md  estados_municipios.py  graficos.ipynb  main.py  opcao_grafico.py  opcao_tabela.py  pyproject.toml  requirements.txt  tratar_dados.ipynb  tratar_dados_candidatos.ipynb  tratar_dados_resultado.ipynb  uniao_dos_dados.ipynb  voce_sabia.py
dados/: presidente_ajustado.csv
