[tool.poetry]
name = "eleicoes"
version = "0.1.0"
description = ""
authors = ["Igor Esposito <sposigor@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^1.4.1"
streamlit = "^1.11.1"
pyUFbr = "^0.1.0"
plotly = "^5.6.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
